--- a/build.xml
+++ b/build.xml
@@ -70,7 +70,7 @@
         	
           <pathelement path="${run.classpath}"/>        	
           <fileset dir="${lib.dir}">
-               <include name="*.jar"/>
+               <include name="**/*.jar"/>
           </fileset>
 
 
