--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
 
            <pathelement location="${lib.dir}/*.jar"/>  
            <fileset dir="${lib.dir}">  
-    	        <include name="*.jar" />  
+    	        <include name="**/*.jar" />  
     	    </fileset>
 
    
